--- a/package.json
+++ b/package.json
@@ -40,13 +40,16 @@
   },
   "dependencies": {
     "bundle-require": "^4.0.2",
-    "esbuild": "^0.19.11",
-    "zod": "^3.22.4"
+    "esbuild": "^0.19.11"
+  },
+  "peerDependencies": {
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
-    "vitest": "^1.2.2"
+    "vitest": "^1.2.2",
+    "zod": "^3.22.4"
   }
 }
