--- a/.verdaccio/config.yml
+++ b/.verdaccio/config.yml
@@ -1,5 +1,9 @@
 storage: ../tmp/local-registry/storage
 
+auth:
+  htpasswd:
+    file: ./htpasswd
+
 uplinks:
   npmjs:
     url: https://registry.npmjs.org/
@@ -14,7 +18,7 @@ packages:
     access: $all
     proxy: npmjs
 
-logs:
+log:
   type: stdout
   format: pretty
   level: warn
