--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
+    "npm-cli-login": "^1.0.0",
     "release-it": "^17.0.3",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
