Add Zod v4 to peer dependencies

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "esbuild": "^0.25.4"
   },
   "peerDependencies": {
-    "zod": "^3.25.0"
+    "zod": "^3.25.0 || ^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
