--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "@commander-js/extra-typings": "^12.0.0",
+    "build-md": "^0.4.2",
     "bundle-require": "^5.1.0",
     "commander": "^12.0.0",
     "esbuild": "^0.25.4"
